# dan2

fe_moveit/: CMakeLists.txt  package.xml
fe_moveit/config/: pilz.rviz
fe_moveit/launch/: pilz_real_robot.launch
fe_moveit/launch/include/: pilz_move_group.launch.xml  ur10e_planning_context.launch
fe_moveit/nodes/: pilz_action_client.py
fe_moveit/scripts/: moveit_programmer.py
fe_tf/: CMakeLists.txt  package.xml
fe_tf/launch/: xacro_loader.launch
fe_tf/nodes/: joint_saver.py  tf_broadcaster.py  tf_broadcaster_2.py  tf_loader.py  tf_saver.py  tf_subscriber.py
fe_tf/scripts/: multiple_fr.py  multiple_frames_static.py  read_data.py  save_data.py  simple_static_broadcaster.py  simple_tf_broadcaster.py
fe_tf/urdf/: cube_link.xacro  stl_link_macro.xacro  two_frames.urdf  ur10e_demo.xacro
fe_tf/urdf/visual/: podstavek.STL
fe_urko/: CMakeLists.txt  fe_urko.rosinstall
fe_urko/config/: cartesian_limits.yaml  joint_limits_accel.yaml  kinematics.yaml  ompl.rviz  urko.srdf
fe_urko/description/: urko.xacro
fe_urko/launch/: urko_moveit_demo.launch
fe_urko/scripts/: abozekonc  frame_and_joint_loader.py  frame_and_joint_saver.py  moveit_programmer.py
src/robot_2dof/: CMakeLists.txt  package.xml
src/robot_2dof/config/: controller.yaml
src/robot_2dof/launch/: zagon_gazebo.launch
src/robot_2dof/urdf/: robot2dof.urdf
src/robot_2dof/urdf/panda/: panda.urdf
test2/scripts/: moj_node.py
