<?xml version="1.0"?>
<package format="2">
  <name>fe_moveit</name>
  <version>0.1.0</version>
  <description>The fe_moveit package</description>

  <maintainer email="timotej.gaspar@fe.uni-lj.si">Timotej Gaspar</maintainer>
  <author email="timotej.gaspar@fe.uni-lj.si">Timotej Gaspar</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur10e_moveit_config</exec_depend>
  <exec_depend>ur5e_moveit_config</exec_depend>
  <exec_depend>ur10_moveit_config</exec_depend>
  <exec_depend>pilz_industrial_motion_planner</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
